Added OG images fetching
